<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/home_content"
        android:id="@+id/txtHomeContent"
        android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtOtherServices1"
            android:text="@string/other_services_content1"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtOtherServices2"
                android:text="@string/other_services_content2"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textColor="#323232"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtOtherServices3"
                android:text="@string/other_services_content3"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtOtherServices4"
                android:text="@string/other_services_content4"
                android:paddingTop="5dp"
                android:textColor="#323232"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtOtherServices5"
                android:text="@string/other_services_content5"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtOtherServices6"
                android:text="@string/other_services_content6"
                android:textColor="#323232"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
